--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "browserslist": "4.8.3",
-    "caniuse-db": "1.0.30001019",
+    "browserslist": "^4.8.3",
+    "caniuse-db": "^1.0.30001019",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "express": "^4.17.1",
